# alphainternal

./: index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/api/: client.ts
src/components/layout/: AppLayout.tsx  CheckinModal.tsx  FocusTimer.tsx  Sidebar.tsx  TopBar.tsx
src/components/pdf/: ReportPDF.tsx
src/lib/: motivations.ts
src/locales/: index.ts
src/pages/: Announcements.tsx  Dashboard.tsx  EmployeeDetail.tsx  Employees.tsx  Login.tsx  Points.tsx  Profile.tsx  ReportCreate.tsx  ReportDetail.tsx  ReportEdit.tsx  Reports.tsx  Schedules.tsx  Settings.tsx  Standups.tsx  Summaries.tsx  TaskDetail.tsx  Tasks.tsx
src/stores/: authStore.ts  focusStore.ts  i18nStore.ts  notificationStore.ts  uiStore.ts
src/utils/: date.ts  storage.ts
